# Sunshine

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/compile_definitions/: common.cmake  linux.cmake  unix.cmake  windows.cmake
cmake/dependencies/: common.cmake  ffmpeg.cmake
cmake/packaging/: common.cmake  linux.cmake  windows.cmake
cmake/prep/: options.cmake  special_package_configuration.cmake
cmake/targets/: common.cmake
docs/: Doxyfile  api.md  building.md  changelog.md  configuration.md  contributing.md  getting_started.md  guides.md  troubleshooting.md
packaging/linux/: dev.lizardbyte.app.Sunshine.metainfo.xml
packaging/linux/Arch/: PKGBUILD
packaging/linux/copr/: Sunshine.spec
packaging/linux/flatpak/: dev.lizardbyte.app.Sunshine.yml
scripts/: linux_build.sh
scripts/icons/: convert_and_pack.sh
src/: config.cpp  config.h  display_device.cpp  entry_handler.cpp  entry_handler.h  httpcommon.cpp  httpcommon.h  logging.cpp  main.cpp  process.cpp  system_tray.cpp  system_tray.h  upnp.cpp  upnp.h  video.cpp  video.h
src/platform/linux/: misc.cpp
src/platform/linux/input/: inputtino.cpp
src/platform/windows/: input.cpp
src_assets/common/assets/web/: Navbar.vue  config.html  index.html  locale.js  troubleshooting.html
src_assets/common/assets/web/configs/tabs/: Advanced.vue  AudioVideo.vue  General.vue  Inputs.vue
src_assets/linux/misc/: 60-sunshine.rules
tests/: CMakeLists.txt  tests_common.h
tests/unit/: test_httpcommon.cpp  test_mouse.cpp  test_video.cpp
(+1 files in other folders)
